theme/src/css/main/content-elements/textpic.css
/* X-Small devices (portrait phones, less than 576px) */
/* No media query for `xs` since this is the default in Bootstrap */
.ce-textpic {
  display: flex;
}

.ce-textpic__picture,
.ce-textpic__text {
  flex: 1;
}

.text-img-above-left .ce-textpic__picture,
.text-img-below-left .ce-textpic__picture {
  text-align: left;
}

.text-img-above-right .ce-textpic__picture,
.text-img-below-right .ce-textpic__picture {
  text-align: right;
}

.text-img-above-center .ce-textpic__picture,
.text-img-below-center .ce-textpic__picture {
  text-align: center;
}

.text-img-below-left,
.text-img-below-right,
.text-img-below-center,
.text-img-right {
  flex-direction: column-reverse;
}

.text-img-above-left,
.text-img-above-right,
.text-img-above-center {
  flex-direction: column;
}

.text-img-left {
  flex-direction: column-reverse;
}

.text-img-left .ce-textpic__picture {
  padding: 0;
}

.text-img-right .ce-textpic__picture {
  padding: 0;
}

.text-img-left .ce-textpic__text {
  padding: 0;
}

.text-img-right .ce-textpic__text {
  padding: 0;
}

/* -------------------------------------------------------- */
/* X-Small devices (portrait phones, less than 576px) xs */
/* @media (max-width: 575.98px) { ... } */
/* Small devices (landscape phones, 576px and up) sm */
/* @media (min-width: 576px) { ... } */

/* -------------------------------------------------------- */
/* Small devices (landscape phones, less than 768px) sm */
/* @media (max-width: 767.98px) { ... } */
/* Medium devices (tablets, 768px and up) md */
/* @media (min-width: 768px) { ... } */

/* -------------------------------------------------------- */
/* Medium devices (tablets, less than 992px) md */
/* @media (max-width: 991.98px) { ... } */
/* Large devices (desktops, 992px and up) lg */
@media (min-width: 992px) {
  .ce-textpic.textorient-auto .ce-textpic__picture {
    flex-grow: 0;
    flex-basis: auto;
  }

  .text-img-left {
    flex-direction: row;
  }

  .text-img-right {
    flex-direction: row-reverse;
  }

  .text-img-left .ce-textpic__picture {
    padding-right: 1rem;
  }

  .text-img-right .ce-textpic__picture {
    padding-left: 1rem;
  }

  .text-img-left .ce-textpic__text {
    padding-left: 1rem;
  }

  .text-img-right .ce-textpic__text {
    padding-right: 1rem;
  }
}

/* -------------------------------------------------------- */
/* Large devices (desktops, less than 1200px) lg */
/* @media (max-width: 1199.98px) { ... } */
/* X-Large devices (large desktops, 1200px and up) xl */
/* @media (min-width: 1200px) { ... } */

/* -------------------------------------------------------- */
/* X-Large devices (large desktops, less than 1400px) xl */
/* @media (max-width: 1399.98px) { ... } */
/* XX-Large devices (larger desktops, 1400px and up) xxl */
/* @media (min-width: 1400px) { ... } */

